@@ -1,3 +1,4 @@
+Use getnameinfo instead of gethostbyaddr.
 Remove gateways from the ROUTES and add to GATEWAYS
 define #INFO_COMPAT if you wish your .info file to add support for some
 old 1.x and 2.x structure.
